add next question, next round functionality

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         </a>
       </div>
     </header>
-    <section id="about">
+    <section id="main">
       <div class="container">
-        <p>
-          Test your computer knowledge by answering as many questions as you can before time runs out. Wrong answers will reduce your time remaining, so think quickly and choose carefully!
-        </p>
-        <button id="start">Start Timed Trivia <i class="material-icons">chevron_right</i></button>
+        <div id="about">
+            <p>
+              Test your computer knowledge by answering as many questions as you can before time runs out. Wrong answers will reduce your time remaining, so think quickly and choose carefully!
+            </p>
+            <button id="start">Start Timed Trivia <i class="material-icons">chevron_right</i></button>
+        </div>
       </div>
     </section>
   </body>
